# janky_emulators

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  compile_flags.txt  neske.c  nrom.c  ols.json  pce.sublime-project  ppu.c  ricoh.c  smbnes.c  test-decomp.asm
misc/: build.bat  build_pce.bat  get_sdl3.bat  pce_notes.txt  quick.bat  quick_pce.bat  test.bat
pce/: Arr.H  Basics.H  Basics.cpp  Bin.H  Bin.cpp  Clk.H  Clk.cpp  Dbg.H  Dbg.cpp  Hu6.H  Hu6.cpp  HuC6280.c  HuC6280.h  HuC6280_Internal.c  HuC6280_Print.c  HwPage.H  HwPage.cpp  IBus.H  Irq.H  Irq.cpp  Main.c  Main.cpp  Memory.c  PCE.c  PGE_TU.cpp  Pce.H  Pce.cpp  PceOut.H  PceOut.cpp  Str.H  Vce.H  Vce.cpp  Vdc.H  Vdc.cpp  Vram.H  Vram.cpp
pce_odin/: .gitignore  adr_mode.odin  bcd.odin  bus.odin  cpu_exec.odin  dbg.odin  debug.rdbg  hu6.odin  hw_ictl.odin  hw_joy.odin  hw_psg.odin  hw_timer.odin  hw_vce.odin  hw_vdc.odin  hwpage.odin  instr.odin  main.odin  run.bat  todo.txt
src/: apu.c  imap.c  jumbo.c  mapper.c  neske.c  neske.h  nrom.c  player.c  ppu.c  ricoh.c  system.c
src/mapper/: axrom.c  cnrom.c  m228.c  mmc1.c  nrom.c  unrom.c
